docs(reviews): W10 verify PASS — 26 smoke test all green
Phase 13 D7 complete. Manual smoke test trên Docker stack (reviews +
config + discovery + auth + postgres + rabbitmq) cover hết:

1-8: Boot + Liquibase + Eureka + ProblemDetail 404/401
A-L: OpenAPI 13 operationId UNIQUE, Pageable sort, validation
9a-c: POST PRODUCT skip eligibility OK, fieldErrors rating Max + title NotBlank
10a-d: UNIQUE author_target dup → 400, moderation EN+VN+leetspeak → PENDING_MODERATION
11: PATCH own review OK
12: Self-vote → 400 errorKey self-vote-forbidden
13-14: 2nd user vote HELPFUL → count=1, flip NOT_HELPFUL → count=0 (denorm recompute)
15-16: Path-tamper → 404 không leak existence
17: /me list mọi status của user
18-22: Admin queue + approve + hide + DELETE 403 (STAFF) vs 204 (ADMIN)
23-26: Summary aggregate + status filter
RMQ: petclinic.events exchange publish_in=7 (review.created event verified)

Skip: eligibility VET/VISIT (cần visits-service container — same java.desktop
bug nếu rebuild), Swagger gateway dropdown (gateway image cũ), edit-window
expired (>7d wait).

Fix khi verify:
- commit 8b6752c: ReviewCreatedEvent.of() targetId UUID → Long (missed migration)
- 3 image cũ (config/auth/postgres) java.desktop ClassNotFoundException →
  Dockerfile mới đã include java.desktop, stop+rebuild OK
- auth register không cho set role → UPDATE roles_csv qua DB

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>